Fixed game details page not showing

--- a/GameStore/wwwroot/css/site.css
+++ b/GameStore/wwwroot/css/site.css
@@ -69,3 +69,11 @@ span.tags {
     font-weight: bold;
     padding: 2px 4px;
 }
+
+.row-hover {
+    cursor: pointer;
+}
+
+.row-hover:hover {
+    background-color: lightgray;
+}
